[gd_scene load_steps=3 format=3 uid="uid://cxy6z7k3m4n5p"]

[ext_resource type="Script" path="res://scripts/components/TrainingCard.gd" id="1_training"]
[ext_resource type="Theme" path="res://themes/MobileTheme.tres" id="2_theme"]

[node name="TrainingCard" type="PanelContainer"]
custom_minimum_size = Vector2(320, 180)
offset_right = 320.0
offset_bottom = 180.0
theme = ExtResource("2_theme")
script = ExtResource("1_training")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ðŸ’ª"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Training Name"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="EffectsList" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="EffectLabel" type="Label" parent="VBox/EffectsList"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "âœ¨ Speed +2"

[node name="CostLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "âš¡ Stamina -15"
horizontal_alignment = 2

[node name="SelectButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Select"